--- a/Project/SageMaker Project.ipynb
+++ b/Project/SageMaker Project.ipynb
@@ -1960,7 +1960,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "I'm using 0.8 as a threshold for positive reviews, so now my model returns NEGATIVE even for short and obvious positive reviews, like: \"absolutely fantastic. A must watch movie\". I now believe that 0.5 would be a b\n",
+    "\n",
+    "It predicts POSITIVE for the sample review: \"The simplest pleasures in life are the best, and this film is one of them. Combining a rather basic storyline of love and adventure this movie transcends the usual weekend fair with wit and unmitigated charm.\""
    ]
   },
   {
