last answer was not saved

--- a/Project/SageMaker Project.ipynb
+++ b/Project/SageMaker Project.ipynb
@@ -1962,7 +1962,7 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "I'm using 0.8 as a threshold for positive reviews, so now my model returns NEGATIVE even for short and obvious positive reviews, like: \"absolutely fantastic. A must watch movie\". I now believe that 0.5 would be a b\n",
+    "I'm using 0.8 as a threshold for positive reviews, so now my model returns NEGATIVE even for short and obvious positive reviews, like: \"absolutely fantastic. A must watch movie\". I now believe that 0.5 was a better value for threshold.\n",
     "\n",
     "It predicts POSITIVE for the sample review: \"The simplest pleasures in life are the best, and this film is one of them. Combining a rather basic storyline of love and adventure this movie transcends the usual weekend fair with wit and unmitigated charm.\""
    ]
@@ -1978,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
